--- a/q/274209.html
+++ b/q/274209.html
@@ -26,23 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>018</td><td>x8664 machine code function</td><td>240718T195509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274248#274248">Peter Co</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
-<tr d-ix="2"><td>024</td><td>K ngn/k</td><td>240718T135912Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274244#274244">Ashy</a></td></tr>
-<tr d-ix="3"><td>075</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
-<tr d-ix="4"><td>037</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
-<tr d-ix="5"><td>006</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
-<tr d-ix="6"><td>147</td><td>Nibbles</td><td>240718T092631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274239#274239">Dominic </a></td></tr>
-<tr d-ix="7"><td>044</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
-<tr d-ix="8"><td>040</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
-<tr d-ix="9"><td>009</td><td>05AB1E</td><td>240718T064459Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274233#274233">Kevin Cr</a></td></tr>
-<tr d-ix="10"><td>030</td><td>JavaScript Node.js</td><td>240718T032003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274229#274229">l4m2</a></td></tr>
-<tr d-ix="11"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
-<tr d-ix="12"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
-<tr d-ix="13"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
-<tr d-ix="14"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Desmos</td><td>240719T014706Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274254#274254">W D</a></td></tr>
+<tr d-ix="1"><td>018</td><td>x8664 machine code function</td><td>240718T195509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274248#274248">Peter Co</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
+<tr d-ix="3"><td>024</td><td>K ngn/k</td><td>240718T135912Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274244#274244">Ashy</a></td></tr>
+<tr d-ix="4"><td>075</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
+<tr d-ix="5"><td>037</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
+<tr d-ix="6"><td>006</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
+<tr d-ix="7"><td>147</td><td>Nibbles</td><td>240718T092631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274239#274239">Dominic </a></td></tr>
+<tr d-ix="8"><td>044</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
+<tr d-ix="9"><td>040</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
+<tr d-ix="10"><td>009</td><td>05AB1E</td><td>240718T064459Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274233#274233">Kevin Cr</a></td></tr>
+<tr d-ix="11"><td>030</td><td>JavaScript Node.js</td><td>240718T032003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274229#274229">l4m2</a></td></tr>
+<tr d-ix="12"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
+<tr d-ix="13"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
+<tr d-ix="14"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
+<tr d-ix="15"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>x86-64 machine code function, 18 bytes</h1>
+<div id="pu0" class="pu"><h1>Desmos, 105 bytes (105+10 bytes?)</h1>
+<pre><code>B(x)=\left\{x&lt;128:[x],join(B(floor(x/128)),mod(x,128))\right\}
+f(x)=total(\left\{31&lt;B(x)&lt;127:0,1\right\})
+</code></pre>
+<p><a href="https://www.desmos.com/calculator/ootyc7ax39" rel="nofollow noreferrer">Try it on Desmos (with test cases)</a></p>
+<hr />
+<p><code>f(x)</code> checks each character's printability and sums it to return the amount of unprintable characters, <strong>returning 0 for printable text and a positive number for unprintable text</strong>
+<br>
+If you need a truthy and falsy compliant <code>f(x)</code> (1 for printable, 0 for unprintable) use <code>f(x)=1-sign(what it was before)^2</code> for <strong>105+10 bytes</strong>. <a href="https://www.desmos.com/calculator/0couamu9e7" rel="nofollow noreferrer">(try this on Desmos!)</a></p>
+<p>If you are pasting this in to try yourself, you must &quot;activate&quot; each equation (<code>B(x)</code> and <code>f(x)</code>) by clicking on it and pressing either the left or right arrow key on your keyboard or the built-in Desmos keyboard.
+<br>
+<sub>Or you can paste in lines individually because that works I guess</sub></p>
+</div>
+<div id="pu1" class="pu"><h1>x86-64 machine code function, 18 bytes</h1>
 <p>Integer arg in ECX, <code>bool</code> return value in AL (actually zero-extended to RAX).  If I'd used EDI for the arg, this would be compatible with the x86-64 System V calling convention.  As-is, it's Windows x64.</p>
 <p>NASM listing trimmed to show hexdump of machine code and source.</p>
 <pre><code>                 ; takes a string of ASCII digits packed into a 32-bit integer
@@ -64,7 +78,7 @@
 <p>We add 1 and copy the low 7-bit character into AL, and isolate it with AND.  Then check if it's 0x21 to 0x7f, i.e. if the original was 0x20 to 0x7e.  Since every 7-bit value is &lt;= 0x7f, we only have to check the low end of the range, hence adding 1.</p>
 <p>This isn't as compact as I'd like, it feels like there should be a way to avoid both a branch and a 3-byte <code>setcc</code>.  Perhaps I could make use 32-bit mode for <code>salc</code> if I can use an unsigned compare. (Undocumented opcode that sets AL according to CF).  I think I can since we <code>cmp</code> after clearing the high bit.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 7 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 7 bytes</h1>
 <pre><code>bØ⁷ỌḟØṖ
 </code></pre>
 <p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCJiw5jigbfhu4zhuJ/DmOG5liIsIsOH4oKs4bmG4oKsIiwiIixbIlswLCAyNywgMzIsIDU5LCA4NywgMTI2LCAxMjcsIDEyOCwgMzAwLCAyMjAxLCA1NzMyLCAxNTcwNjEzNzQsIDE1NzA2MTM3NV0iXV0=" rel="nofollow noreferrer">Try It Online!</a></p>
@@ -77,12 +91,12 @@ b          convert to base
 </code></pre>
 <p>If anything is left after the filter (i.e. the return value is a non-empty list), then it's the <code>false</code> case. If the filter removes everything (i.e. the return value is an empty list), then it's the <code>true</code> case. The footer uses <code>Ṇ</code> (logical NOT) to map <code>[] -&gt; true</code> and <code>[...] -&gt; false</code>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://bitbucket.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://bitbucket.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
 <pre><code>f:{&amp;/(a&lt;127),31&lt;a:128\x}
 </code></pre>
 <p><a href="https://tio.run/##y9bNS8/7/z/NqlpNXyPRxtDIXFPH2NAm0crQyCKmovZ/moKBAhToK6Ql5hSnKmg8mtCgycWVpmBoam5gZmhsbgKUKikqBcp4FSnWaSLJmCI0AaUeTVio@R8A" rel="nofollow noreferrer" title="K (ngn/k) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 75 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 75 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>func f(n int)bool{for k:=n;k&gt;0;k&gt;&gt;=7{if -^k%128&lt;33{return 0&gt;1}}
 return n&gt;0}
 </code></pre>
@@ -90,7 +104,7 @@ return n&gt;0}
 <p>Based on <a href="https://codegolf.stackexchange.com/a/274211/77309">@Jitse's answer</a>.</p>
 <p>Does not swap true and false.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 37 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 37 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;&gt;7&gt;0&lt;f(n&gt;&gt;7)or-~n%128&lt;33
 </code></pre>
@@ -100,13 +114,13 @@ return n&gt;0}
 <p>-2 bytes thanks to squareroot12621</p>
 <p>-2 bytes thanks to Albert.Lang</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>₇τCkQF
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwi4oKHz4RDa1FGIiwiIiwiMFxuMjdcbjMyXG41OVxuODdcbjEyNlxuMTI3XG4xMjhcbjMwMFxuMjIwMVxuNTczMlxuMTU3MDYxMzc0XG4xNTcwNjEzNzUiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Outputs an empty list for truthy, a non-empty list for falsey.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 14 nibbles (7 bytes)</h1>
+<div id="pu7" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 14 nibbles (7 bytes)</h1>
 <p><strong>Program bytes:</strong></p>
 <pre><code>d9 87 12 08 3a dd 3b
 </code></pre>
@@ -130,7 +144,7 @@ In this case, though, for unknown (to me) reasons, the Nibbles interpreter outpu
 This is not the normal way to write or run a Nibbles program, but it works.</em></p>
 <p><a href="https://i.sstatic.net/82CKfQST.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/82CKfQST.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, <s>54</s> 44 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, <s>54</s> 44 bytes</h1>
 <p>-10 bytes by Dominic van Essen and GammaFunction</p>
 <pre class="lang-bash prettyprint-override"><code>(($1%128%127&gt;31))&amp;&amp;((($1&lt;128))||$0 $[$1&gt;&gt;7])
 </code></pre>
@@ -140,13 +154,13 @@ This is not the normal way to write or run a Nibbles program, but it works.</em>
 ATO link assumes the function is named <code>f</code> because $0 doesn't work in ATO, but the penalty for hardcoding the script name would be a single byte, so the score would be the same.</p>
 <p>Turns out this is a port of <a href="https://codegolf.stackexchange.com/a/274211/88192">@Jitse's answer</a>, but i came up with it independently.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>44</s> <s>43</s> 40 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>44</s> <s>43</s> 40 bytes</h1>
 <p><em>Edit: -3 bytes thanks to pajonk</em></p>
 <pre class="lang-r prettyprint-override"><code>f=\(x)(x+1)%%128&gt;31&amp;(!(y=x%/%128)||f(y))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWNzXSbGM0KjQ1KrQNNVVVDY0s7IwN1TQUNSptK1T1QXzNmpo0jUpNTYj6W4x5aRoGmgrKCrq6dgppiTnFqQoajyY0aHKlaRiZY4jPBokbG8HES4pKwcILQMKmlqjC1iBBC3NUwXCQoKGRGapoHUQU076FEAkLDIlGqBuNDTAd36QDdr2RgSGG1MRHE2aC3WqO7gmdFLBVxibmhoYGhuiGOjyaMO_RhN4ksBpTcwMzQ2NzE1QDvIoU65ClTdGMAMqD_AMJdlh0AQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 9 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 9 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žQÇIžyвåP
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//6L7Aw@2eR/dVXth0eGnA//@GpuYGZobG5qYA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKS/f@j@wIPt1ce3Vd5YdPhpQH/df5HG@gYmesYG@mYWupYmOsYGpkBMYi20DE2AMoZGRjqmJoD5Q2NTcwNDQ0MDXQMTc0NzAyNzU3gLNNYAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -161,7 +175,7 @@ ATO link assumes the function is named <code>f</code> because $0 doesn't work in
            # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 30 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 30 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;-~n%128&lt;33?n&lt;!!n:f(n/128)
 </code></pre>
@@ -174,7 +188,7 @@ ATO link assumes the function is named <code>f</code> because $0 doesn't work in
 <p><a href="https://tio.run/##ddDLDsFAFMbxvaeohUybFHNRU7ey9gLWRSukmUqLZYO9pJYiEV6tL1KXkKhzzPqXL3P@C3fjxpNovlxVVTj18tzvqZ5TTVSFcbsrRL@s2r6uHEca@SRUcRh4tSCc6b5OKNHezzC0el3z3SD2ND1Lt0bph3JJcHoGVPAiXUXrl7wCabUw2QHOlpgbAcd4k0CXIE4S9JgbQm2c7rBKglJc701YlFNGMHvM0hNMJT9Zv08zp/DDoiEZo4ySwuwgSy9ZehhDb0naZEI2yPfwMConf6lVnH7YZ7n8Dg" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Worse input</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
 <pre><code>7W_YA6Y2m
 </code></pre>
 <p>Outputs a vector of ones, which is <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy</a>, or a vector containing at least a zero, which is <a href="https://codegolf.stackexchange.com/a/95057/36398">falsy</a>, depending on whether the result only uses printable ASCII or not.</p>
@@ -188,7 +202,7 @@ m     % Ismember (element-wise)
       % Implicit display
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
 <pre><code>⌊⍘Ｎ⭆¹²⁸№γ℅ι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3My8ztzRXwymxODW4BCiUruGZV1Ba4leam5RapKGpowAR9U0s0DA0stBRcM4vBWpLBzKAJiUmlwAVZWqCgfX//4am5gZmhsbmJv91y3IA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Actually outputs <code>1</code> or <code>0</code> for once. Explanation:</p>
@@ -218,7 +232,7 @@ m     % Ismember (element-wise)
             Implicitly print
 </code></pre>
 </div>
-<div id="pu13" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
+<div id="pu14" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
 <p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
 <p>Returns <strong>0</strong> for <em>printable</em> or <strong>true</strong> for <em>non-printable</em>.</p>
 
@@ -227,7 +241,7 @@ m     % Ismember (element-wise)
 <p><a href="https://tio.run/##ddBNC4IwHMfxe6/CDsUGlXtIZ5TSuTfQ2UqjkC3UOolU98COEUS9Nd/IeqBDurXzhx/7f9f@zk/m8WqTdrlYBFKGLne9bs5bmDgjSrMMcM9zGWy3Q8ChnAueiCjoRWIJQoCM74PQME0j9KMkMEBZ7GGjCgnTw2sdUlKBabz9uHvdWQONG9aVwzRqWleY2KrKVcW0JzxU6GjhQdOFIqS1x45SkCCsk@eyuChx2Dfj70GdhfJR2mcYI4wqk@OyuJXFaaZoiyEbU9b/HZ3EzfwftCqzL/luJZ8" rel="noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Or <strong><a href="https://tio.run/##ddBNC4IwHMfxe69iHYItKvegzSilc2@gs5lGITO0OolU98COEUS9Nd/IeqBDurXzhx/7f1fezkv9ZLnedEU8D6QMHeG43Vy0CLVHjGUZFK7rcNQOoUDSj0UaR0EvihcwhBh8H0LAMEDoRWkAYFnsUaMKKdfDax0yWoGbZPtx97qzBho3rCuba9S0rgjtqypXFdee8FChrYUHTReGsdYeO0pBiolOnsviosTh34y/B3XmykeZyQnBBFcmx2VxK4vTTNEWx33CuPk7Okma@T9oVWZf8t1KPgE" rel="noreferrer">29 bytes</a></strong> with <strong>0</strong> for <em>printable</em> / <strong><em>truthy</em></strong> for <em>non-printable</em>.</p>
 </div>
-<div id="pu14" class="pu"><h1>APL+WIN, 36 bytes</h1>
+<div id="pu15" class="pu"><h1>APL+WIN, 36 bytes</h1>
 <p>Prompts for integer. Index origin=0. 1=true, 0=false</p>
 <pre><code>(+/v∊32+⍳95)=⍴v←((⌈128⍟2⌈n)⍴128)⊤n←⎕
 </code></pre>
