--- a/q/22.html
+++ b/q/22.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>082</td><td>Forth gforth</td><td>240701T131044Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/273854#273854">reffu</a></td></tr>
-<tr d-ix="1"><td>158</td><td>Go</td><td>240624T174718Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/273773#273773">bigyihsu</a></td></tr>
+<tr d-ix="0"><td>156</td><td>Go</td><td>240624T174718Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/273773#273773">bigyihsu</a></td></tr>
+<tr d-ix="1"><td>082</td><td>Forth gforth</td><td>240701T131044Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/273854#273854">reffu</a></td></tr>
 <tr d-ix="2"><td>181</td><td>Rust</td><td>240624T182250Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/273774#273774">bigyihsu</a></td></tr>
 <tr d-ix="3"><td>071</td><td>bash</td><td>190323T040536Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/182069#182069">roblogic</a></td></tr>
 <tr d-ix="4"><td>008</td><td>Thunno 2 t!</td><td>230615T180538Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/261890#261890">The Thon</a></td></tr>
@@ -94,7 +94,34 @@
 <tr d-ix="65"><td>069</td><td>Python</td><td>110129T085338Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/178#178">Keith Ra</a></td></tr>
 <tr d-ix="66"><td>044</td><td>GolfScript</td><td>110129T043051Z</td><td><a href="https://codegolf.stackexchange.com/questions/22/the-luhn-algorithm-for-verifying-credit-card-numbers-etc/172#172">C. K. Yo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://www.complang.tuwien.ac.at/forth/gforth/Docs-html/" rel="nofollow noreferrer">Forth (gforth)</a>, 82 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>164 158</s> 156 bytes</h1>
+<pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
+func f(s string)bool{o,L:=0,len(s)
+for i:=range L{r:=(s[L-i-1]-48)&lt;&lt;(i%2)
+n,k:=Sprint(r),0
+for j:=range n{k+=int(n[j])-48}
+o+=k}
+return o%10&lt;1}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=jVLLitswFIUu9RW3AoPEKMGOH7LdqFBod6GUTnZpKG6wgieJbGwFWoy_pLMIhe5mN1_Tfk2lOO04xYVufMW5OveeY52v37bl6aHKNrtsm8MhK9T3o5aT-Md9cajKWk-xPGiM5FFtQJIGGl0Xaks_leW-LdkiFS7b54o0FMmyhiIVdabMoEVbp4I0q8WkmHjrSRDT-ZwUzowixXapuK3MFE1qytwz7-43T7W7G2FbanW3pobXofJG7DpU5_pYKygdz517Xa_x57NH_aXKYWlVHTca2kJVF4UvIP9cgZXZoV699UYotEg3kApYrZctanGQJDPuJzH3IszMlLxjVyjHTGb7poe9mR-EEY8v1R0w_mrFQxr_M80dh71xeDYO-4O1T2gwfjkch6NxmI_D_3CTDGGfB1FozEeJtd8fbI2SIA55lJiTPfhRHPDQfAcm_pcac_NrY__K6ZW0pwcxj_7ORmyvCBZC3C5fvV-aivuYfmTaRqCPnIlDi7LNGZFET02GKCok6KlN0HMBttfCeZwk2GlAvARHA3E0_aAwgzOF2WusJ1HojIDhfnjz9jX0-y_ZPZ36-gs" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<ul>
+<li>-6 by @ceilingcat</li>
+<li>-2 from Go 1.22+ range-over-int</li>
+</ul>
+<h3>Explanation</h3>
+<pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
+func f(s string)bool{
+o,L:=0,len(s)     // setup: sum variable, and length of string
+for i:=0;i&lt;L;i++{ // for 0 to len(s)...
+r:=(s[L-i-1]-48)  // get the char at i-th from the end, and convert to 0-9
+         &lt;&lt;(i%2)  // if an odd index, double it
+n,k:=Sprint(r),0  // convert to a string for digit summing
+for j:=range n{k+=int(n[j])-48} // sum digits
+o+=k}             // add to total sum
+return o%10&lt;1}    // check if divisible by 10
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://www.complang.tuwien.ac.at/forth/gforth/Docs-html/" rel="nofollow noreferrer">Forth (gforth)</a>, 82 bytes</h1>
 
 <pre class="lang-forth prettyprint-override"><code>: f &gt;r i + 1- 0 r&gt; 0 do over i - c@ '0 - i 2 mod 1+ * 10 /mod + + loop 10 mod 0= ;
 </code></pre>
@@ -117,32 +144,6 @@
   loop        \ end the counted loop
   10 mod 0=   \ check if divisible by 10
 ;             \ end word definition
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>164</s> 158 bytes</h1>
-<pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
-func f(s string)bool{o,L:=0,len(s)
-for i:=0;i&lt;L;i++{r:=(s[L-i-1]-48)&lt;&lt;(i%2)
-n,k:=Sprint(r),0
-for j:=range n{k+=int(n[j])-48}
-o+=k}
-return o%10&lt;1}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=jVJNi9swEIUe9SumBoNElGDHH7KdqFBob2Ep3dzSUNxgB20S2dgKtBj_ksISFnrb2_6a9tdUikPXWbzQi2f0Rm_mjfV-PmyL02OZbnbpNoNDKuSvo8rH0e97cSiLSk2s_KAslB_lBnJcQ60qIbfkW1Hsm4IuEu7QfSZxTVBeVCD0eSbmi5kYjZoq4bheLcZi7K7HfkTmcyzsKUGS7hJ-W-o-CleEOmfmXcKrVGoJstmNuCnJ1d2aaF6LihHftajK1LGSUNiuM3fbTuWfN0_qR5nB0ug6bhQ0QpYXjTPIvpdghLao02-2wwQapGpIOKzWywY1lh_HU-bFEXNDi-ouWUuvUGbRPN3XHexOPT8IWXSJTo_xohT1aexfN2cYdofh6TDs9cY-o_7w5WAYDodhNgy_sk3chz3mh4FePozN-l1iYhj7UcDCWGcm8cLIZ4H-9pb4X2rE9K-NvKtNr6Q9P4h-9E_GYnuJLc757fL956WOVmfUr1QZC3SW03ZoULo5IzlWE-0hgkQOamIc9JaDqTVwbpdjy66BvwNbAbYV-SItCmcKNddoRyLQagH9-fDx5gN08y_ePZ26-Bc" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<ul>
-<li>-6 by @ceilingcat</li>
-</ul>
-<h3>Explanation</h3>
-<pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
-func f(s string)bool{
-o,L:=0,len(s)     // setup: sum variable, and length of string
-for i:=0;i&lt;L;i++{ // for 0 to len(s)...
-r:=(s[L-i-1]-48)  // get the char at i-th from the end, and convert to 0-9
-         &lt;&lt;(i%2)  // if an odd index, double it
-n,k:=Sprint(r),0  // convert to a string for digit summing
-for j:=range n{k+=int(n[j])-48} // sum digits
-o+=k}             // add to total sum
-return o%10&lt;1}    // check if divisible by 10
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>195</s> 181 bytes</h1>
