--- a/q/125383.html
+++ b/q/125383.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>Pip l</td><td>240515T222338Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/273116#273116">DLosc</a></td></tr>
-<tr d-ix="1"><td>111</td><td>YASEPL</td><td>240410T140639Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272477#272477">madeforl</a></td></tr>
-<tr d-ix="2"><td>199</td><td>Go</td><td>240501T202352Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272915#272915">bigyihsu</a></td></tr>
+<tr d-ix="0"><td>193</td><td>Go</td><td>240501T202352Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272915#272915">bigyihsu</a></td></tr>
+<tr d-ix="1"><td>022</td><td>Pip l</td><td>240515T222338Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/273116#273116">DLosc</a></td></tr>
+<tr d-ix="2"><td>111</td><td>YASEPL</td><td>240410T140639Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272477#272477">madeforl</a></td></tr>
 <tr d-ix="3"><td>150</td><td>Rust</td><td>240501T193800Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272914#272914">Dornteuf</a></td></tr>
 <tr d-ix="4"><td>059</td><td>Perl 5 n</td><td>240424T204431Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272789#272789">Xcali</a></td></tr>
 <tr d-ix="5"><td>025</td><td>J</td><td>240424T210247Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/272790#272790">Jonah</a></td></tr>
@@ -71,7 +71,23 @@
 <tr d-ix="42"><td>021</td><td>V</td><td>170608T182709Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/125390#125390">DJMcMayh</a></td></tr>
 <tr d-ix="43"><td>006</td><td>Charcoal</td><td>170608T182441Z</td><td><a href="https://codegolf.stackexchange.com/questions/125383/draw-a-big-slash-x/125389#125389">Okx</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-l</code>, 22 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>199</s> 193 bytes</h1>
+<pre class="lang-go prettyprint-override"><code>import.&quot;strings&quot;
+func f(n int)(s string){S,R:=&quot; &quot;,Repeat
+for i:=range n{s+=R(S,i)+`\`+R(S,max(0,2*(n-i)-1))+`/
+`}
+s+=R(S,n)+`X
+`
+for i:=range n{s+=R(S,n-i-1)+`/`+R(S,max(0,2*i+1))+`\
+`}
+return}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=dY9PSsUwEIf3OUUIPEhsqu1bSSGeQfpcCEZseCYlSKclTUEoPYmbIngIlx7D2zj948KFq8lk5vcx39t73c6fnTm_mNrSxnggvunaEC-ZayL7GKJLr7-_fv_6GDzUPSNugDN1HKiHKHhPt4EYT7IsFKNMlrazJhLXBuoLFQwgHsY-USU_SS-SSlfJ8mzMK8_k8YJD6kWaC5xckWoi-yZgf0-qfziYwQgm_rJ8snL0wgk2DgGmXeRuvXvR5IKOK_VJWlooupEfHtFnzGQujzLPJly5Ra_oODs8U3Wj4dBr0MCklWhvhSAT2dnzvNUf" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<ul>
+<li>-6 by Go 1.22+ range-over-int.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-l</code>, 22 bytes</h1>
 <pre><code>YEYa*2+1(&quot; /\X&quot;y*2+Ry)
 </code></pre>
 <p><a href="https://do-stuff-online.github.io/do-stuff-online/#@WyJwaXAiLCIiLCJZRVlhKjIrMShcIiAvXFxYXCJ5KjIrUnkpIiwiIiwiIiwiLWwgMyJd" rel="nofollow noreferrer">Try It Online!</a></p>
@@ -92,7 +108,7 @@ Y                       ; ‎⁣Yank into y
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/madeforlosers/yasepl-esolang" rel="nofollow noreferrer">YASEPL</a>, <s>114</s> 111 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/madeforlosers/yasepl-esolang" rel="nofollow noreferrer">YASEPL</a>, <s>114</s> 111 bytes</h1>
 <pre><code>=i!m'!n$!u$m]2!f$47»!b$92»!l$+`1!o;&quot; &quot;,i~#b$u-i*-;&quot; &quot;,o~&gt;f!i+n}l,m-`2!n[3--!o;&quot; &quot;,m~&gt;&quot;X&quot;!m]3=m-!l$!b)f!f$92»|`3
 </code></pre>
 <p>explanation (poor)</p>
@@ -120,19 +136,6 @@ Y                       ; ‎⁣Yank into y
                                                                                                   !b)f!f$92»                swap B and F
                                                                                                             |               loop back to 1 and  print other half
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 199 bytes</h1>
-<pre class="lang-go prettyprint-override"><code>import.&quot;strings&quot;
-func f(n int)(s string){S,R:=&quot; &quot;,Repeat
-for i:=0;i&lt;n;i++{s+=R(S,i)+`\`+R(S,max(0,2*(n-i)-1))+`/
-`}
-s+=R(S,n)+`X
-`
-for i:=n;i&gt;0;i--{s+=R(S,i-1)+`/`+R(S,max(0,2*(n-i)+1))+`\
-`}
-return}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=bZBfSsQwEMbfc4oQWEhMqu0-SdfuGaTrg2DFhjUpQTotaQpC6Ul8KYKH8ASewds47Xb3yaf58838mG8-Pqtm-m718U1XhtbaAXF12_hwzWwd2FcfbHT7-3PudcE7qDpGbA9HajlQB0Hwjp4EMRxUnmaMMpWb1uhAbOOpS7N45-5g56QcOpnl_KCckGVRyjmt9TuP1faKQ-RElAhUbkg5knUSsH4k5ZmElD3SouhCwhXc-IclF1Yxs7wJvYdxtfOwXD-b5YIOC_lFGZpm1GvANzw9o6shVonaqiQeceQe3QXL2eaVZvsCNl0BBTBlFP7ACEFGsrKn6RT_AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 150 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>|n|{let w=|e|&quot; &quot;.repeat(e);for i in 0..n{print!(&quot;{}\\{}/
@@ -719,7 +722,7 @@ last edit changed the first one back</p>
 
 <p>and the following decision tree:</p>
 
-<p><a href="https://i.stack.imgur.com/GOOvy.png" rel="noreferrer"><img src="https://i.stack.imgur.com/GOOvy.png" alt="decision tree"></a></p>
+<p><a href="https://i.sstatic.net/GOOvy.png" rel="noreferrer"><img src="https://i.sstatic.net/GOOvy.png" alt="decision tree"></a></p>
 
 <h3>Demo</h3>
 
