--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240719T015933Z
+"   /golfscore                                      20240719T020412Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/58243.html">16-bit binary grid                              : 0058243</a>
+<a href="q/80974.html">24 and 12 Hour Times                            : 0080974</a>
+<a href="q/125383.html">Draw a big slash X                              : 0125383</a>
 <a href="q/261908.html">Last odd digit of power of 2                    : 0261908</a>
 <a href="q/22.html">The Luhn algorithm for verifying credit card num: 0000022</a>
 <a href="q/274209.html">Wait ASCII was 128 characters all along?        : 0274209</a>
