--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240719T020412Z
+"   /golfscore                                      20240719T020555Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/83039.html">Wait a minute – in less than ten seconds        : 0083039</a>
 <a href="q/58243.html">16-bit binary grid                              : 0058243</a>
 <a href="q/80974.html">24 and 12 Hour Times                            : 0080974</a>
 <a href="q/125383.html">Draw a big slash X                              : 0125383</a>
