--- a/q/83039.html
+++ b/q/83039.html
@@ -27,7 +27,7 @@
     <th class="tlink">Link</th>
   </tr>
 <tr d-ix="0"><td>215</td><td>Go</td><td>240329T141908Z</td><td><a href="https://codegolf.stackexchange.com/questions/83039/wait-a-minute-in-less-than-ten-seconds/272190#272190">bigyihsu</a></td></tr>
-<tr d-ix="1"><td>026</td><td>Uiua</td><td>240329T124418Z</td><td><a href="https://codegolf.stackexchange.com/questions/83039/wait-a-minute-in-less-than-ten-seconds/272186#272186">noodle m</a></td></tr>
+<tr d-ix="1"><td>026</td><td>Uiua</td><td>240329T124418Z</td><td><a href="https://codegolf.stackexchange.com/questions/83039/wait-a-minute-in-less-than-ten-seconds/272186#272186">noodle p</a></td></tr>
 <tr d-ix="2"><td>081</td><td>Javascript</td><td>240329T061834Z</td><td><a href="https://codegolf.stackexchange.com/questions/83039/wait-a-minute-in-less-than-ten-seconds/272185#272185">l4m2</a></td></tr>
 <tr d-ix="3"><td>048</td><td>Julia p 9</td><td>210827T103240Z</td><td><a href="https://codegolf.stackexchange.com/questions/83039/wait-a-minute-in-less-than-ten-seconds/233776#233776">MarcMush</a></td></tr>
 <tr d-ix="4"><td>088</td><td>PowerShell Core</td><td>210824T214400Z</td><td><a href="https://codegolf.stackexchange.com/questions/83039/wait-a-minute-in-less-than-ten-seconds/233700#233700">Julian</a></td></tr>
@@ -67,17 +67,20 @@
 <tr d-ix="38"><td>144</td><td>PowerShell v4</td><td>160616T143310Z</td><td><a href="https://codegolf.stackexchange.com/questions/83039/wait-a-minute-in-less-than-ten-seconds/83067#83067">AdmBorkB</a></td></tr>
 <tr d-ix="39"><td>247</td><td>Rust</td><td>160616T141739Z</td><td><a href="https://codegolf.stackexchange.com/questions/83039/wait-a-minute-in-less-than-ten-seconds/83066#83066">raggy</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 215 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 215 <s>205</s> bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;time&quot;
 type D=Duration
 func f()(e,t D){N:=Now
 s,c:=N(),make(chan D)
-for i:=0;i&lt;9;i++{go func(C chan D){s:=N();Sleep(7*Second);C&lt;-N().Sub(s)}(c)}
-for i:=0;i&lt;9;i++{select{case a:=&lt;-c:t+=a}}
+for range 9{go func(C chan D){s:=N();Sleep(7*Second);C&lt;-N().Sub(s)}(c)}
+for range 9{select{case a:=&lt;-c:t+=a}}
 return N().Sub(s),t}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=ZY89asQwEIV7nWJwJcX2ki6JbVXregn4BIoy9oq1JCONCcH4JGlMIIcI5B4ht4n3J6TYaoY3bx7ve3vv_PI5KH1QHYJVxjFjBx9ok7SWko-R2vz-5_tPI2MxYfQ6INSyHoMi4x1rR6eh5YJjRlCLaVfInX9hMdPrwkVm1QG53iu3HlnrA5hC3pameihNmk6dh2MA38LFMsXTW9n0iAO_u2lQe_csym2Vr_KmGZ94FDPXYr4Oi9ijpkmriKAKWeW6oFSqeWYBaQwO_hMyms94X6f-R3YuYGKPwTjqHV-BBLtYluU8fwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=VY9NTsMwEIX3PoWVlQ1Jt5S0WTXrCiknMGYcrMZ2ZI-FkOWTsImQOAQSV-gBuA3uD0KsZvTevJn53t5Ht3zOQh7ECNQIbYk2s_O4qpTB6iOiatbfx18NtYGK4OsMtO_66AVqZ4mKVlLFOIMaac_Tvu327oWEWpaG8dqIAzD5LGwxiXKeemHLtfs0OnrKsh29uimcE5thApjZ3c0A0tknvtltmyKvhvjIAs9M8vxvT4AJJCYpAlDRdttGtnjbiZyJB4ze0r9wjfkC9XX--kTMOE3kwWuLk2UFg5PryLJc6g8" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Spawns 9 threads of 7 seconds each. Returns in the ballpark of <code>7.000295677s 1m3.002016702s</code>.</p>
+<ul>
+<li>-10 bytes by Go 1.22+ range-over-int.</li>
+</ul>
 <h3>Ungolfed Explaination</h3>
 <pre class="lang-go prettyprint-override"><code>import.&quot;time&quot;
 func f()(exec,total Duration){
@@ -155,7 +158,7 @@ sleep 7                              # Sleeps for 7 seconds
 (date)-$u|% T*ls*                    # Gets the script time in seconds
 </code></pre>
 <h2>Sample output</h2>
-<p><a href="https://i.stack.imgur.com/Hv93Z.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/Hv93Z.png" alt="Shows total wait time of 63.1528189 seconds and a total run time of 7.1531403 seconds" /></a></p>
+<p><a href="https://i.sstatic.net/Hv93Z.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Hv93Z.png" alt="Shows total wait time of 63.1528189 seconds and a total run time of 7.1531403 seconds" /></a></p>
 </div>
 <div id="pu5" class="pu"><h2>Rust, <s>237</s> 234 bytes</h2>
 <p>This is basically the same as @raggy's <a href="https://codegolf.stackexchange.com/a/83066/103498">answer</a>, just improved a bit.</p>
@@ -430,7 +433,7 @@ wait(8)secs
 change[t v]by(timer
 </code></pre>
 
-<p><a href="https://i.stack.imgur.com/07dUP.png" rel="noreferrer"><img src="https://i.stack.imgur.com/07dUP.png" alt="Visual script"></a></p>
+<p><a href="https://i.sstatic.net/07dUP.png" rel="noreferrer"><img src="https://i.sstatic.net/07dUP.png" alt="Visual script"></a></p>
 
 <p>See it in action <a href="https://scratch.mit.edu/projects/114222939/" rel="noreferrer">here</a>.</p>
 
