--- a/q/274225.html
+++ b/q/274225.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
-<tr d-ix="1"><td>104</td><td>R</td><td>240718T151236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274247#274247">Dominic </a></td></tr>
-<tr d-ix="2"><td>330</td><td>Elisp</td><td>240718T150721Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274246#274246">Samuel J</a></td></tr>
-<tr d-ix="3"><td>096</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
+<tr d-ix="0"><td>093</td><td>Python 3</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
+<tr d-ix="1"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
+<tr d-ix="2"><td>104</td><td>R</td><td>240718T151236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274247#274247">Dominic </a></td></tr>
+<tr d-ix="3"><td>330</td><td>Elisp</td><td>240718T150721Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274246#274246">Samuel J</a></td></tr>
 <tr d-ix="4"><td>041</td><td>Raku</td><td>240718T132936Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274243#274243">Ven</a></td></tr>
 <tr d-ix="5"><td>136</td><td>R</td><td>240718T061307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274232#274232">pajonk</a></td></tr>
 <tr d-ix="6"><td>016</td><td>Haskell + hgl</td><td>240718T115820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274241#274241">Wheat Wi</a></td></tr>
@@ -40,7 +40,23 @@
 <tr d-ix="11"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="12"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 99 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 93 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda a:min(permutations(a),key=lambda a:max(map(abs,accumulate(a))))
+from itertools import*
+</code></pre>
+<p><a href="https://tio.run/##RY/LboNADEX3fIV38VSmSguJ0khE6ndQFk4yiFHnpcG05evpQFTVC0u@9/gVZxmCr5a@@Vgsu@udgc/OeIw6uUlYTPAjsqJPPTf/AP@g44h8HYlvt8lNlkVnLEfRp@DAiE4Sgh3BuBiSPC19SGCN12A8hKg97tW5gFxFaEB/scXVfR6jNYK75rJT7b5TmYjJeMEeM6nU0r7QK1VU06GD5gL47mcI6a6TKtryQGVNG7CZG5uVispMYz4gyKATjMFO22PwbWSAvHvSUK0DTlQ/OmsqT10W3ghqgpzL458Bq/hQfgE" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>-45 bytes thanks to Jonathan Allan</p>
+<p>-3 bytes thanks to no comment</p>
+<hr />
+<h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 104 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda a:a and min((f((a:=a[1:]+[x])[:-1])+[x]for x in a),key=lambda a,i=0:max(abs(i:=i+x)for x in a))
+</code></pre>
+<p><a href="https://tio.run/##TY5BbsMgEEX3OcXsAspQ2bVTuUhE6jkQCyJjGdUGhElrn94FR626GDT//zfDhC2N3jVdiPs@iEnP916D5rlcD7N1hAyEaC60rLm6yFVRyVmtaGkHH2EF60BT/DTb3zRaUfFZr0TfF2K5sJeV/mPpXsRknSnaB@NIRfkJsgogwHzpiZT0ZQmTTeQsbmcqK0UzEaJ1KV@UybxG1viKDbZ4VSBuQD7cBj72JtKTZFdkLR7AER5sdhpkmSb5AJ9GE2Hx0yNZ7xb4tmmE/PfDQFMWdNg@J1tkncrGO0KLkF/29htAMZ/ODw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>Solution without <code>itertools</code></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 99 bytes</h1>
 <p>Naive method trying all possible permutations.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(a,s=M=f,m,...p)=&gt;m&gt;M||a.map((v,i)=&gt;f(a.filter(_=&gt;i--),q=~~s+v,q*q&lt;m?m:q*q,...p,v))+a?o:(M=m,o=p)
@@ -53,7 +69,7 @@
   M = f,          //   M = minimum of maximums (initially NaN'ish)
   m,              //   m = maximum of squared cumulative sums
                   //       (initially undefined)
-  ...p            //   p[] = permutation
+  ...p            //   p[] = current permutation
 ) =&gt;              //
 m &gt; M ||          // abort if m is greater than M
 a.map((v, i) =&gt;   // otherwise, for each value v at index i in a[]:
@@ -76,7 +92,7 @@ a.map((v, i) =&gt;   // otherwise, for each value v at index i in a[]:
   (M = m, o = p)  //   update M to m and o[] to p[]
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>124</s> <s>108</s> 104 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>124</s> <s>108</s> 104 bytes</h1>
 <p><em>Edit: -13 bytes thanks to Giuseppe.<br />
 Edit2: -4 bytes thanks to pajonk</em></p>
 <pre class="lang-r prettyprint-override"><code>\(x,n=sum(x|1),m=combn(rep(1:n,n),n))x[m[,order(apply(m,2,\(v)max(cumsum(x[v])^2)/all(table(v)&lt;2)))[1]]]
@@ -90,7 +106,7 @@ Edit2: -4 bytes thanks to pajonk</em></p>
 <li>Get the minimum, and select the elements of the input using the corresponding indices.</li>
 </ul>
 </div>
-<div id="pu2" class="pu"><h1>Elisp, <s>341</s> 330 Bytes</h1>
+<div id="pu3" class="pu"><h1>Elisp, <s>341</s> 330 Bytes</h1>
 <p>Edit: learned the sort function</p>
 <pre><code>(defun x (bag)(if (null bag)'(())(mapcan #'(lambda (e)(mapcar #'(lambda (p) (cons e p))(x(cl-remove e bag :count 1))))bag)))(defun z (a)(car (car (sort(cl-loop for e in (x a) collect(let ((i (cons e (apply 'max(cl-loop for o = (reverse e) then (cdr o) while o collect(abs (apply '+ o)))))))i))'(lambda (j k)(&lt; (cdr j) (cdr k))))))
 </code></pre>
@@ -116,21 +132,6 @@ Edit2: -4 bytes thanks to pajonk</em></p>
         (&lt; (cdr j) (cdr k))))
     )))
 </code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 96 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda a:min(permutations(a),key=lambda a,i=0:max(abs(i:=i+x)for x in a))
-from itertools import*
-</code></pre>
-<p><a href="https://tio.run/##NY/dboMwDEbveQrfNdmciQ06MaRU2nMwLlI1CKv5UwgbPD0LVL2J5PMdx3ZY0@hd1YS4DfJnM8pebwpUa8mxoKOdk0rk3cQUx7te5VNAkmVr1cLUdWLUSnpd@OAjLEAOFOfFEL0FSjom780EZIOP6WXbHUNO75oP2rGStwXkKoAE/asM29O3KRhK7CQvJ96VPc9GiOQSG1g2Od@6d/zACms89yAvwL7dCj7edORFJ84oajyEIzzcTCoU2WZ5AZ9GHWHyZj5ugz9KI@TZs4Zq/6DB@tFZo2j6DL4QaoT8is9nADt8kH8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-<p>-45 bytes thanks to Jonathan Allan</p>
-<hr />
-<h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 104 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>f=lambda a:a and min((f((a:=a[1:]+[x])[:-1])+[x]for x in a),key=lambda a,i=0:max(abs(i:=i+x)for x in a))
-</code></pre>
-<p><a href="https://tio.run/##TY5BbsMgEEX3OcXsAspQ2bVTuUhE6jkQCyJjGdUGhElrn94FR626GDT//zfDhC2N3jVdiPs@iEnP916D5rlcD7N1hAyEaC60rLm6yFVRyVmtaGkHH2EF60BT/DTb3zRaUfFZr0TfF2K5sJeV/mPpXsRknSnaB@NIRfkJsgogwHzpiZT0ZQmTTeQsbmcqK0UzEaJ1KV@UybxG1viKDbZ4VSBuQD7cBj72JtKTZFdkLR7AER5sdhpkmSb5AJ9GE2Hx0yNZ7xb4tmmE/PfDQFMWdNg@J1tkncrGO0KLkF/29htAMZ/ODw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-<p>Solution without <code>itertools</code></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Raku</a>, 41 bytes</h1>
 
