--- a/q/274209.html
+++ b/q/274209.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Raku Perl 6 rakudo</td><td>240719T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274258#274258">bb94</a></td></tr>
-<tr d-ix="1"><td>016</td><td>K ngn/k</td><td>240719T041846Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274256#274256">akamayu</a></td></tr>
-<tr d-ix="2"><td>nan</td><td>Desmos</td><td>240719T014706Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274254#274254">W D</a></td></tr>
-<tr d-ix="3"><td>018</td><td>x8664 machine code function</td><td>240718T195509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274248#274248">Peter Co</a></td></tr>
-<tr d-ix="4"><td>007</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
-<tr d-ix="5"><td>024</td><td>K ngn/k</td><td>240718T135912Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274244#274244">Ashy</a></td></tr>
-<tr d-ix="6"><td>075</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
-<tr d-ix="7"><td>037</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
+<tr d-ix="0"><td>036</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Raku Perl 6 rakudo</td><td>240719T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274258#274258">bb94</a></td></tr>
+<tr d-ix="2"><td>016</td><td>K ngn/k</td><td>240719T041846Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274256#274256">akamayu</a></td></tr>
+<tr d-ix="3"><td>nan</td><td>Desmos</td><td>240719T014706Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274254#274254">W D</a></td></tr>
+<tr d-ix="4"><td>018</td><td>x8664 machine code function</td><td>240718T195509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274248#274248">Peter Co</a></td></tr>
+<tr d-ix="5"><td>007</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
+<tr d-ix="6"><td>024</td><td>K ngn/k</td><td>240718T135912Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274244#274244">Ashy</a></td></tr>
+<tr d-ix="7"><td>075</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
 <tr d-ix="8"><td>006</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
 <tr d-ix="9"><td>147</td><td>Nibbles</td><td>240718T092631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274239#274239">Dominic </a></td></tr>
 <tr d-ix="10"><td>044</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
@@ -45,12 +45,23 @@
 <tr d-ix="16"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
 <tr d-ix="17"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda n:-~n%128&lt;33or f(n&gt;&gt;7)*n&gt;&gt;7
+</code></pre>
+<p><a href="https://tio.run/##Xc6xTsMwEIDh3U9xDEi@KkGOTepQIA/ACzCioNZqpPRiOWZgiYAnKCNigVfriwQ7C06Xk@476fTbV7/vSU2Tue@aw/O2AdrkI10WsrpTqndgONW1xlWckwlAGayeoCU4NJYP3l0Ntmt9Br3dEReIGwZgXUueGx4nIeIkIM9rME037ICfjm/IpF7SNzIlZ/LuZZYfZOVNIrfIKp3sj8gKuU5gjHD29jdatbT3OUCJs6iPLFRJUSz183T8CiF6EZdtw9tSi3Wh9HXiD@5i/L@U6adwijV/" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Outputs with truthy and falsey swapped</p>
+<p>-2 bytes thanks to Themoonisacheese</p>
+<p>-2 bytes thanks to squareroot12621</p>
+<p>-2 bytes thanks to Albert.Lang</p>
+<p>-1 byte thanks to Jonathan Allan</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 41 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>{$_&amp;&amp;!grep !(127&gt;*&gt;31),.polymod(128 xx*)}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=RY7BCoJAEIbvPsUoIq2ssbOr7obkq4RQdihTLEERjz1FFw_VO_U2jSZ0mf_jm39gHs86OzXju-jAy7ev5pYH5sN6d-d59rE-VGCvUOrUTxUyvq7Kc1eUe1IG2tZnw3JwT6y8rGElOGw4IAUqDlJzUJJDRM4Qo4ynMZOhlaCelAKpoaceqlAjivk80iJGpcM_RgyCFNwL9BbANevAISbT5yQHJ7GWZ8bxl18" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 16 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 16 bytes</h1>
 <pre><code>1~&amp;/~32 127'128\
 
 
@@ -61,7 +72,7 @@
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJx10L0OgjAQB/Cdp0AGPxIId61QwMQw+wIuDmqUyQl1JeqmiQmOxsToq/EktgWTEs9uza/X+99lCRZdv+DMRiZ6yKKZZWWpvDbH97yxvcv3a7tfla+BtCAmbKQkEoRMlSALf6XQv4lvL0PclS4KBITIxdCkSd6RdXNIHK99HFkBditAtthsde6D+i7+g2fdC2i8aOQ0XhUyQeNDIUc9vCBfvOvNRCQem9QcgPSTq5szQEpvVXmvkw8FIsjpTE+r8inTL80lB60Xcssq3wfw3Ila" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1>Desmos, 105 bytes (105+10 bytes?)</h1>
+<div id="pu3" class="pu"><h1>Desmos, 105 bytes (105+10 bytes?)</h1>
 <pre><code>B(x)=\left\{x&lt;128:[x],join(B(floor(x/128)),mod(x,128))\right\}
 f(x)=total(\left\{31&lt;B(x)&lt;127:0,1\right\})
 </code></pre>
@@ -77,7 +88,7 @@ If you need a truthy and falsy compliant <code>f(x)</code> (1 for printable, 0 f
 <br>
 <sub>Or you can paste in lines individually because that works I guess</sub></p>
 </div>
-<div id="pu3" class="pu"><h1>x86-64 machine code function, 18 bytes</h1>
+<div id="pu4" class="pu"><h1>x86-64 machine code function, 18 bytes</h1>
 <p>Integer arg in ECX, <code>bool</code> return value in AL (actually zero-extended to RAX).  If I'd used EDI for the arg, this would be compatible with the x86-64 System V calling convention.  As-is, it's Windows x64.</p>
 <p>NASM listing trimmed to show hexdump of machine code and source.</p>
 <pre><code>                 ; takes a string of ASCII digits packed into a 32-bit integer
@@ -99,7 +110,7 @@ If you need a truthy and falsy compliant <code>f(x)</code> (1 for printable, 0 f
 <p>We add 1 and copy the low 7-bit character into AL, and isolate it with AND.  Then check if it's 0x21 to 0x7f, i.e. if the original was 0x20 to 0x7e.  Since every 7-bit value is &lt;= 0x7f, we only have to check the low end of the range, hence adding 1.</p>
 <p>This isn't as compact as I'd like, it feels like there should be a way to avoid both a branch and a 3-byte <code>setcc</code>.  Perhaps I could make use 32-bit mode for <code>salc</code> if I can use an unsigned compare. (Undocumented opcode that sets AL according to CF).  I think I can since we <code>cmp</code> after clearing the high bit.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 7 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 7 bytes</h1>
 <pre><code>bØ⁷ỌḟØṖ
 </code></pre>
 <p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCJiw5jigbfhu4zhuJ/DmOG5liIsIsOH4oKs4bmG4oKsIiwiIixbIlswLCAyNywgMzIsIDU5LCA4NywgMTI2LCAxMjcsIDEyOCwgMzAwLCAyMjAxLCA1NzMyLCAxNTcwNjEzNzQsIDE1NzA2MTM3NV0iXV0=" rel="nofollow noreferrer">Try It Online!</a></p>
@@ -112,28 +123,18 @@ b          convert to base
 </code></pre>
 <p>If anything is left after the filter (i.e. the return value is a non-empty list), then it's the <code>false</code> case. If the filter removes everything (i.e. the return value is an empty list), then it's the <code>true</code> case. The footer uses <code>Ṇ</code> (logical NOT) to map <code>[] -&gt; true</code> and <code>[...] -&gt; false</code>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://bitbucket.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://bitbucket.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
 <pre><code>f:{&amp;/(a&lt;127),31&lt;a:128\x}
 </code></pre>
 <p><a href="https://tio.run/##y9bNS8/7/z/NqlpNXyPRxtDIXFPH2NAm0crQyCKmovZ/moKBAhToK6Ql5hSnKmg8mtCgycWVpmBoam5gZmhsbgKUKikqBcp4FSnWaSLJmCI0AaUeTVio@R8A" rel="nofollow noreferrer" title="K (ngn/k) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 75 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 75 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>func f(n int)bool{for k:=n;k&gt;0;k&gt;&gt;=7{if -^k%128&lt;33{return 0&gt;1}}
 return n&gt;0}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TVFLasMwEKVbnWJqCNjgBMmOozSpDIV2VSil9a4_XGMF40Q2jhxahI_RVTeh0EP0KO1pKtnB8UKaN6OZ92ZGn1-rYv9Txkker1LYxJlA2aYsKjmx-EZa37Xk4_nvNa9FAtwWkAnpvBbFWvGignzBxDIPsT4hoyrjMH7OR8Sbn_u-qlJZVwJwSJoGHRwR4qaj_Dv5kO9lChFsZVUnElQmSsO-hPStBCPRINTKmqZsBxSSW1gweHiKFFLY5fF6mzYuUh49Yt9zNV0Lg7MezmkPiTcb4EGl7npAg4f8HiZHL6ADDeJPKSGYDLJJQPGM-HR6TDpEgj5JT3Zb6VnXwrYYY_fRxV2kreUgs9UXV5o5q1joH9EzKxQnbYTbcqK35CC9aDkxazplYN4UtHTctkY7YCHo2x7tnEdhudCWuCbN7YocaHQDQ324urmETv_wO_t9Z_8B" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Based on <a href="https://codegolf.stackexchange.com/a/274211/77309">@Jitse's answer</a>.</p>
 <p>Does not swap true and false.</p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 37 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;&gt;7&gt;0&lt;f(n&gt;&gt;7)or-~n%128&lt;33
-</code></pre>
-<p><a href="https://tio.run/##Xc6xTsMwEIDh3U9xDJV8KEGOTeq0lDwAL8CIglqrkdKL5ZiBJWp5gjIiFni1vkiIs@B0sc7fSaffvvt9S2oYzGNTHV63FdCaylKXYmN4GLB1aU@LTBYbpQbTOqAEbl@gJjhUlnfe3XW2qX0Crd0RF4hrBmBdTZ4bHl5CxEFAmpZgqqbbAb@cj8ikntM3MiUn8u5tkh9k@SqSB2SFjv7PyDK5jKAPcHX2N1gxt9MUoMRV1EcyVkmRzfXzcv4aQ/QsLtmOZ3MtlpnS95E/uZv@f5PHl8ZVqPkD" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>Outputs with True and False swapped</p>
-<p>-2 bytes thanks to Themoonisacheese</p>
-<p>-2 bytes thanks to squareroot12621</p>
-<p>-2 bytes thanks to Albert.Lang</p>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>₇τCkQF
