--- a/q/3766.html
+++ b/q/3766.html
@@ -52,7 +52,7 @@ union U{
 int main(){
   for(int i=0;i&lt;256;){
     u.i=i;
-    u.d=((double(*)())L&quot;\x6f00e402\x4e284840\xd65f03c0&quot;)(u.d);
+    asm(&quot;.int 0x6f00e402, 0x4e284840&quot;:&quot;=w&quot;(u.d):&quot;w&quot;(u.d));
     printf(&quot;%02x &quot;,u.i);
     ++i%16||puts(&quot;&quot;);
   }
