--- a/q/274209.html
+++ b/q/274209.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>068</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
-<tr d-ix="1"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
-<tr d-ix="2"><td>036</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
-<tr d-ix="3"><td>041</td><td>Raku Perl 6 rakudo</td><td>240719T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274258#274258">bb94</a></td></tr>
+<tr d-ix="0"><td>036</td><td>Raku Perl 6 rakudo</td><td>240719T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274258#274258">bb94</a></td></tr>
+<tr d-ix="1"><td>068</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
+<tr d-ix="2"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
+<tr d-ix="3"><td>036</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
 <tr d-ix="4"><td>016</td><td>K ngn/k</td><td>240719T041846Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274256#274256">akamayu</a></td></tr>
 <tr d-ix="5"><td>nan</td><td>Desmos</td><td>240719T014706Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274254#274254">W D</a></td></tr>
 <tr d-ix="6"><td>018</td><td>x8664 machine code function</td><td>240718T195509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274248#274248">Peter Co</a></td></tr>
@@ -45,7 +45,13 @@
 <tr d-ix="16"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
 <tr d-ix="17"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>75</s> 68 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>41</s> 36 bytes</h1>
+<p>Returns 0 for false and a non-zero integer for true.</p>
+<pre class="lang-perl prettyprint-override"><code>{$_*?(127&gt;.polymod(128 xx*).all&gt;31)}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=RY7BCoJAEIbvPsUgEiqr7Oy67oZkjxJC7CXNsARFPPYUXTxU79TbNJrQZeabf76BeTyb4tRO76qHjd292puNzMcbvEO491HoPL7UZV_VRxoMdF0YxEVZ5hKDcXXvmWPrBnzOYMsAqaFkIDQDKRgoygwxinQuCxlacfKE4EiGnj2UiUbky7nSPEWpkz-qAKIcvDMMDsC16MElpmSwFI5u5qzPTNOvfwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>75</s> 68 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>func f(n int)bool{for k:=n;k&gt;0;k&gt;&gt;=7{if -^k%128&lt;33{n=0}}
 return n&gt;0}
 </code></pre>
@@ -56,7 +62,7 @@ return n&gt;0}
 <li>-7 bytes by @ovs, return the first <code>return</code> with <code>n=0</code>, forcing the final <code>return</code> to <code>false</code>.</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
 <p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
 <p>Returns <strong>0</strong> for <em>printable</em> or <strong>true</strong> for <em>non-printable</em>.</p>
 
@@ -72,7 +78,7 @@ return n&gt;0}
 </code></pre>
 <p><a href="https://tio.run/##ddDLCoJAGIbhfVdhi0DDcg7qGKW07gZamzpRyBhqrUSqfWDLCKJuzRuxAy7UmWb98DH/u3UPbuLFm106YpEfVBW1me2McjaAyJphnGVUZo5jE2XIKi9iSRQG4zBay1QGUv0URdI0ibphEkhyWRyVXhsiIob3LsSoBdN4/3PPrjMmAjftKosI1LKrIDJ5lfOKCE948dASwpOgCwZAaM8qVxABKJLXsrhxcUidsXmQ6nMfxTqBEEDQmpyXxaMsLitOGwSYEBO9ObqI@/k/aLRmP/LbqnoD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:-~n%128&lt;33or f(n&gt;&gt;7)*n&gt;&gt;7
 </code></pre>
@@ -82,11 +88,6 @@ return n&gt;0}
 <p>-2 bytes thanks to squareroot12621</p>
 <p>-2 bytes thanks to Albert.Lang</p>
 <p>-1 byte thanks to Jonathan Allan</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 41 bytes</h1>
-<pre class="lang-perl prettyprint-override"><code>{$_&amp;&amp;!grep !(127&gt;*&gt;31),.polymod(128 xx*)}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=RY7BCoJAEIbvPsUoIq2ssbOr7obkq4RQdihTLEERjz1FFw_VO_U2jSZ0mf_jm39gHs86OzXju-jAy7ev5pYH5sN6d-d59rE-VGCvUOrUTxUyvq7Kc1eUe1IG2tZnw3JwT6y8rGElOGw4IAUqDlJzUJJDRM4Qo4ynMZOhlaCelAKpoaceqlAjivk80iJGpcM_RgyCFNwL9BbANevAISbT5yQHJ7GWZ8bxl18" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 16 bytes</h1>
 <pre><code>1~&amp;/~32 127'128\
